@@ -76,7 +76,7 @@
    * global structure adaptation (page / skip links / header / main content / footer)
    */
 
-  .ontablet-list-2columns {
+  .ontablet-list-1column {
     -webkit-column-count: 1;
        -moz-column-count: 1;
             column-count: 1;
