@@ -17,7 +17,8 @@ section: fe-guidelines
 </code></pre>
   </div>
   <div class="w49 flex-self-vcenter">
-    <span class="ellipsis inbl mw100p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor lectus eu massa fermentum scelerisque. Praesent vitae massa vel nulla sodales consectetur in vitae urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+    <span class="ellipsis inbl mw100p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor lectus eu massa fermentum scelerisque. Praesent vitae massa vel nulla sodales consectetur in vitae urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span><br>
+    To be used with <code>mw100</code> and <code>inbl</code>.
   </div>
 </div>
 <div class="flex flex-spacebetween mb2 onmobile-flex-column">
@@ -148,6 +149,44 @@ section: fe-guidelines
     Applies <code>pointer-events: none</code> to element.
   </div>
 </div>
+
+<h2>Sizing helpers</h2>
+
+<p>Here is the list of available sizing helpers: </p>
+
+<ul class="list-2columns ontablet-list-1column">
+  <li><code>.w0 </code> = <code> { width: 0; }</code></li>
+  <li><code>.w1 </code> = <code> { width: 1%; }</code></li>
+  <li><code>.w2 </code> = <code> { width: 2%; }</code></li>
+  <li><code>.w3 </code> = <code> { width: 3%; }</code></li>
+  <li><code>.w5 </code> = <code> { width: 5%; }</code></li>
+  <li><code>.w10 </code> = <code> { width: 10%; }</code></li>
+  <li><code>.w20 </code> = <code> { width: 20%; }</code></li>
+  <li><code>.w25 </code> = <code> { width: 25%; }</code></li>
+  <li><code>.w30 </code> = <code> { width: 30%; }</code></li>
+  <li><code>.w33 </code> = <code> { width: 33.333%; }</code></li>
+  <li><code>.w40 </code> = <code> { width: 40%; }</code></li>
+  <li><code>.w45 </code> = <code> { width: 45%; }</code></li>
+  <li><code>.w49 </code> = <code> { width: 49%; }</code></li>
+  <li><code>.w50 </code> = <code> { width: 50%; }</code></li>
+  <li><code>.w60 </code> = <code> { width: 60%; }</code></li>
+  <li><code>.w66 </code> = <code> { width: 66.666%; }</code></li>
+  <li><code>.w70 </code> = <code> { width: 70%; }</code></li>
+  <li><code>.w75 </code> = <code> { width: 75%; }</code></li>
+  <li><code>.w80 </code> = <code> { width: 80%; }</code></li>
+  <li><code>.w90 </code> = <code> { width: 90%; }</code></li>
+  <li><code>.w100 </code> = <code> { width: 100%; }</code></li>
+  <li><code>.mw100 </code> = <code> { max-width: 100%; }</code></li>
+  <li><code>.h100 </code> = <code> { height: 100%; }</code></li>
+</ul>
+<p>Some other are available, please check in your Sass files the ones used, you can edit Sass variables to generate the ones your need:</p>
+
+<ul class="list-2columns ontablet-list-1column">
+  <li><code>$list-width-px</code></li>
+  <li><code>$list-width-em</code></li>
+  <li><code>$list-max-width-px</code></li>
+  <li><code>$list-min-width-em</code></li>
+</ul>
 
 <h2>Others</h2>
 
