@@ -150,7 +150,7 @@ subsection: icons
 
   <div class="flex flex-spacebetween mb2 onmobile-flex-column">
     <div class="w49 ">
-      <ul class="unstyled m0 list-2columns ontablet-list-2columns">
+      <ul class="unstyled m0 list-2columns ontablet-list-1column">
         {% assign listColors = "global-grey#global-altgrey#global-light#global-border#global-muted#global-success#global-warning#global-attention#pm-blue#pm-blue-dark#pm-blue-light#pv-green#pv-green-light#pv-green-dark#white" | split: '#' %}
 
         {% for color in listColors %}
