@@ -4,6 +4,9 @@
 
 - updated drop downs (`max-height` limit, plus shadows/etc.)
 - fixed `viewbox` for some icons/simplified documentation
+- renamed some classes for CSS multicolumns (consistency)
+- renamed some Sass variable for better consistency
+- added documentation about width helpers
 
 
 # [1.6.12] - 2019-05-29
